5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1643_2446.log
== TEST (2019-04-14 23:38:38) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "
a=senha
print(a)
-- ERROR:
File "XXXX", line 2
    a=senha
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:39:17) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha
print(a)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:11) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
print(a)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:41:55) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
b=senha%100000
print(a)
print(b)
-- OUTPUT:
0
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:56:33) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha invalida")

print(b)
-- OUTPUT:
acesso liberado
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:27) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:58:29) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:58:59) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))
a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.22938
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:59:12) 
-- CODE:
senha=int(input("digite a senha de seis digitos: "))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
